--- a/tabcmd_jar/tabcmd/Gemfile
+++ b/tabcmd_jar/tabcmd/Gemfile
@@ -8,7 +8,7 @@ group :default do
   gem 'hpricot', "0.8.6"
   gem 'jruby-openssl', "0.7.4"
   gem 'json_pure', "1.5.1"
-  #gem 'log4r', "2.0.0"
+  gem 'log4r', "2.0.0"
   gem 'rails' , "3.2.22"
   gem 'rchardet', "1.3"
   gem 'ruby-debug', "0.10.4"
@@ -19,6 +19,7 @@ group :default do
   gem 'unit_record', "0.9.1"
   gem 'i18n', '>= 0.4.2'
   gem 'debugger'
+  gem 'iconv'
 end
 
 
